test/libsolidity/syntaxTests/modifiers/constructor_as_modifier.sol
contract C {
    constructor() C() {}
}
// ----
// TypeError: (31-34): Referenced declaration is neither modifier nor base class.
